recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: not found: value step
	current(step);
                ^Tree:15: error: Double does not take parameters
		angle(2 * angle)
                     ^